Updated title symbol, Page alignment fix
Added empty div that extends viewport width in order to prevent shifting of wrapper content to the left. Adding the empty div allows for centering and extending the wrapper across allowing for double background parallax effect to occur

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3227,10 +3227,14 @@ input, select, textarea {
 		background-image: url("../../images/EchoBacktoBack.jpg");
 		background-color: rgb(32, 32, 32);
 		background-size: cover;
-		background-position: center ;
+		background-position: top center ;
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 
+	}
+
+	#wrapper #placeholder {
+		width: 100vw;
 	}
 
 		#wrapper > .bg {
